--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -4,10 +4,18 @@ body
     text-align: left;
     font-family: "Arial";
 }
+
+#cabecera
+{
+    background: blue;
+    color: whitesmoke;
+    padding: 0%;
+    margin: 0.5em;
+}
 #container
 {
     width: 70%;
-    padding: 1em;
+    padding: 0;
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
@@ -16,4 +24,8 @@ body
 #container h1
 {
     font-size: 20px;
+}
+#post
+{
+   padding: 1em; 
 }
