--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -7,10 +7,19 @@ body
 
 #cabecera
 {
-    background: blue;
+    background: #33A;
+    box-shadow: 0px 2p 50px 0px rgba(0,0,0,0.75);
     color: whitesmoke;
+    font-weight: bold;
     padding: 0%;
     margin: 0.5em;
+}
+
+#cabecera #tagline
+{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
 }
 #container
 {
