cambio de tipografia otra vez

--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -2,7 +2,7 @@ body
 {
     color: skyblue;
     text-align: left;
-    font-family: "Arial Black";
+    font-family: "Times New Roman";
 }
 
 #cabecera
